--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -59,6 +59,9 @@ body {
     display: flex;
     flex-direction: column;
     text-align:  center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
   }
   .profile {
     max-width: 700px;
